# PlatformSDL

./: .gitignore  CMakeLists.txt
include/: Fonts.h  Game.h  GameEngine.h  MenuButton.h  MenuEngine.h  Window.h
src/: Game.cpp  GameEngine.cpp  MenuButton.cpp  MenuEngine.cpp  Window.cpp  main.cpp
